@@ -1,3 +1,11 @@
+2008-12-01  Nick Clifton  <nickc@redhat.com>
+
+	PR 7044
+	* dlltool.c (run): Use formatting string to avoid compile time
+	warning.
+	(gen_exp_file): Check return value from fread.
+	* windmc.c (main): Check return value from fread.
+
 2008-09-25  Richard Henderson  <rth@redhat.com>
 
 	* dwarf.c (size_of_encoded_value, get_encoded_value): Move up.
